--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "description": "Generate valid datetime attributes for the <time> HTML element.",
   "type": "module",
-  "exports": "./src",
+  "exports": "./index.js",
   "engines": {
     "node": ">=12.8"
   },
@@ -13,7 +13,7 @@
     "watch": "jest --watch"
   },
   "files": [
-    "src/"
+    "index.js"
   ],
   "keywords": [
     "time",
