Add CHANGELOG file and ship it with the package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "watch": "jest --watch"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "CHANGELOG.md"
   ],
   "keywords": [
     "time",
