--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@babel/preset-env": "^7.13.9",
     "babel-jest": "^26.6.3",
     "c8": "^7.6.0",
+    "eslint": "^7.30.0",
+    "eslint-plugin-jest": "^24.3.6",
     "jest": "^26.6.3"
   }
 }
