--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "c8": "^7.6.0",
     "eslint": "^7.30.0",
     "eslint-plugin-jest": "^24.3.6",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jest-runner-eslint": "^0.10.1"
   }
 }
