Remove useless `files` entry from package.json
CHANGELOG.md is among the [files](https://docs.npmjs.com/cli/v7/configuring-npm/package-json#files) always published by NPM.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "lint-fix": "npx eslint index.js tests/index.js --fix"
   },
   "files": [
-    "index.js",
-    "CHANGELOG.md"
+    "index.js"
   ],
   "keywords": [
     "time",
