--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "files": [
     "index.js",
-    "./types/index.d.ts"
+    "types/index.d.ts"
   ],
   "types": "./types/index.d.ts",
   "keywords": [
