--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datetime-attribute",
-  "version": "0.7.0",
+  "version": "1.0.0-rc.1",
   "description": "Generate valid datetime attributes for the <time> HTML element.",
   "type": "module",
   "sideEffects": false,
