--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-fix": "npx eslint src/**/*.js tests/index.js --fix"
   },
   "files": [
-    "src/index.js",
+    "src/**/*.js",
     "types/index.d.ts"
   ],
   "types": "./types/index.d.ts",
