--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,10 @@
     "rules": {
         "indent": [2, 2, { "SwitchCase": 1 }],
         "linebreak-style": [2, "unix"],
-        "quotes": [2, "single", { "allowTemplateLiterals": true }],
+        "quotes": [2, "single", {
+            "allowTemplateLiterals": true,
+            "avoidEscape": true
+        }],
         "semi": [2, "never"],
 
         "array-bracket-spacing": [2, "never"],
