Add all types definitions to shipped files

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "files": [
     "src/**/*.js",
-    "types/index.d.ts"
+    "types/**/*.d.ts"
   ],
   "types": "./types/index.d.ts",
   "keywords": [
