--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datetime-attribute",
-  "version": "1.1.0-rc.2",
+  "version": "1.1.0",
   "description": "Generate valid datetime attributes for the <time> HTML element.",
   "type": "module",
   "sideEffects": false,
