Add release notes to published files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-fix": "npx eslint src/**/*.js tests/index.js --fix"
   },
   "files": [
+    "CHANGELOG.md",
     "src/**/*.js",
     "types/**/*.d.ts"
   ],
