Replace Jest by Vitest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,7 @@
 {
     "env": {
-        "es2021": true,
-        "jest/globals": true
+        "es2021": true
     },
-    "plugins": ["jest"],
     "extends": "eslint:recommended",
     "parserOptions": {
         "sourceType": "module",
