--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "scripts": {
     "types": "npx -p typescript tsc src/index.js --declaration --allowJs --emitDeclarationOnly --outDir types",
-    "test": "jest",
+    "test": "vitest run",
     "test-types": "npx tsd",
-    "test:coverage": "c8 --all --include=src npm test",
-    "watch": "jest --watch",
-    "lint": "npx eslint src/**/*.js tests/index.js",
-    "lint-fix": "npx eslint src/**/*.js tests/index.js --fix"
+    "coverage": "vitest run --coverage",
+    "watch": "vitest watch",
+    "lint": "npx eslint src/**/*.js tests/index.test.js",
+    "lint-fix": "npx eslint src/**/*.js tests/index.test.js --fix"
   },
   "files": [
     "CHANGELOG.md",
@@ -44,12 +44,9 @@
   "devDependencies": {
     "@babel/core": "^7",
     "@babel/preset-env": "^7",
-    "babel-jest": "^29",
-    "c8": "^7",
+    "@vitest/coverage-c8": "^0.28.2",
     "eslint": "^8",
-    "eslint-plugin-jest": "^27",
-    "jest": "^29",
-    "jest-runner-eslint": "^1.1",
-    "tsd": "^0.25"
+    "tsd": "^0.25",
+    "vitest": "^0.28.2"
   }
 }
