--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=12.8"
   },
   "scripts": {
-    "types": "npx -p typescript tsc src/index.js --declaration --allowJs --emitDeclarationOnly --outDir types",
+    "types": "tsc src/index.js --declaration --allowJs --emitDeclarationOnly --outDir types",
     "test": "vitest run",
     "test-types": "npx tsd",
     "coverage": "vitest run --coverage",
@@ -42,11 +42,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@babel/core": "^7",
-    "@babel/preset-env": "^7",
     "@vitest/coverage-c8": "^0.28.2",
     "eslint": "^8",
     "tsd": "^0.25",
+    "typescript": "^4.9.4",
     "vitest": "^0.28.2"
   }
 }
