--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-      name: Use pnpm
-    - uses: pnpm/action-setup@v2
+    - name: Use pnpm
+      uses: pnpm/action-setup@v2
     - run: npm ci
     - run: npm test
     - run: npm run test-types
