--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "engines": {
     "node": ">=12.8"
   },
+  "packageManager": "pnpm@7.27.0",
   "scripts": {
     "types": "tsc src/index.js --declaration --allowJs --emitDeclarationOnly --outDir types",
     "test": "vitest run",
-    "test-types": "npx tsd",
+    "test-types": "pnpm exec tsd",
     "coverage": "vitest run --coverage",
     "watch": "vitest watch",
-    "lint": "npx eslint src/**/*.js tests/index.test.js",
-    "lint-fix": "npx eslint src/**/*.js tests/index.test.js --fix"
+    "lint": "pnpm exec eslint src/**/*.js tests/index.test.js",
+    "lint-fix": "pnpm exec eslint src/**/*.js tests/index.test.js --fix"
   },
   "files": [
     "CHANGELOG.md",
@@ -46,6 +47,6 @@
     "eslint": "^8",
     "tsd": "^0.25",
     "typescript": "^4.9.4",
-    "vitest": "^0.28.2"
+    "vitest": "^0.27"
   }
 }
