--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Use pnpm
       uses: pnpm/action-setup@v2
-    - run: pnpm install
+    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
     - run: pnpm run test-types
