Add fake build step to please size-limit GitHub action

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-types": "pnpm exec tsd",
     "coverage": "vitest run --coverage",
     "watch": "vitest watch",
+    "build": "echo \"Nothing to build, this command is only here to please size-limit GitHub action\" && exit 0",
     "lint": "pnpm exec eslint src/**/*.js tests/index.test.js",
     "lint-fix": "pnpm exec eslint src/**/*.js tests/index.test.js --fix"
   },
