Monitor package size

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coverage": "vitest run --coverage",
     "watch": "vitest watch",
     "build": "echo \"Nothing to build, this command is only here to please size-limit GitHub action\" && exit 0",
+    "size": "size-limit",
     "lint": "pnpm exec eslint src/**/*.js tests/index.test.js",
     "lint-fix": "pnpm exec eslint src/**/*.js tests/index.test.js --fix"
   },
