Use Temporal API polyfill for development purpose

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "overrides": {
       "has": "npm:@nolyfill/has@latest"
     }
+  },
+  "dependencies": {
+    "@js-temporal/polyfill": "^0.4.4"
   }
 }
