--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
       "has": "npm:@nolyfill/has@latest"
     }
   },
-  "dependencies": {
+  "peerDependencies": {
     "@js-temporal/polyfill": "^0.4.4"
   }
 }
