--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "size-limit": [
     {
-      "path": "src/index.js",
-      "brotli": true
+      "path": "src/index.js"
     }
   ],
   "files": [
@@ -52,14 +51,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^10.0.1",
-    "@vitest/coverage-v8": "^0.34.3",
-    "@vitest/ui": "^0.34.3",
-    "eslint": "^8.46.0",
-    "size-limit": "^10.0.1",
+    "@size-limit/preset-small-lib": "^11.0.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
+    "eslint": "^8.54.0",
+    "size-limit": "^11.0.0",
     "tsd": "^0.29.0",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.3"
+    "vitest": "^0.34.6"
   },
   "pnpm": {
     "overrides": {
