--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,4 @@ jobs:
       uses: pnpm/action-setup@v2
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
-    - run: pnpm run test-types
+    - run: pnpm test:types
