--- a/package.json
+++ b/package.json
@@ -51,18 +51,19 @@
     "access": "public"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^11.0.1",
-    "@vitest/coverage-v8": "^1.0.2",
-    "@vitest/ui": "^1.0.2",
-    "eslint": "^8.55.0",
-    "size-limit": "^11.0.1",
-    "tsd": "^0.30.1",
+    "@size-limit/preset-small-lib": "^11.0.2",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
+    "eslint": "^8.57.0",
+    "size-limit": "^11.0.2",
+    "tsd": "^0.30.6",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.2"
+    "vitest": "^1.3.1"
   },
   "pnpm": {
     "overrides": {
-      "has": "npm:@nolyfill/has@latest"
+      "has": "npm:@nolyfill/has@latest",
+      "hasown": "npm:@nolyfill/hasown@latest"
     }
   }
 }
