Try to trigger the Vitest GitHub action reporter with a failing test

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,6 @@ jobs:
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm lint
     - run: pnpm test
+      env:
+        GITHUB_ACTIONS: true
     - run: pnpm test:types
