Revert "Try to not run pnpm install multiple times in CI"
9c23a0f74d00c7f4fc587ebda86e26ec25d17a96

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Use pnpm
       uses: pnpm/action-setup@v3
+    - run: pnpm install --no-frozen-lockfile
     - run: pnpm lint
 
   test:
@@ -62,6 +63,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Use pnpm
       uses: pnpm/action-setup@v3
+    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
 
   test-types:
@@ -81,4 +83,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Use pnpm
       uses: pnpm/action-setup@v3
+    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test:types
