--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,27 +8,9 @@ on:
     branches: [ main ]
 
 jobs:
-  install:
+  build:
+
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Use pnpm
-      uses: pnpm/action-setup@v3
-    - run: pnpm install --no-frozen-lockfile
-
-  lint:
-    runs-on: ubuntu-latest
-    needs: [install]
 
     strategy:
       matrix:
@@ -45,43 +27,5 @@ jobs:
       uses: pnpm/action-setup@v3
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm lint
-
-  test:
-    runs-on: ubuntu-latest
-    needs: [install]
-
-    strategy:
-      matrix:
-        node-version: [20]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Use pnpm
-      uses: pnpm/action-setup@v3
-    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
-
-  test-types:
-    runs-on: ubuntu-latest
-    needs: [install]
-
-    strategy:
-      matrix:
-        node-version: [20]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Use pnpm
-      uses: pnpm/action-setup@v3
-    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test:types
