--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "types": "tsc",
     "test": "vitest run",
     "test:types": "pnpm exec tsd",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui --coverage.enabled --coverage.exclude=types",
+    "coverage": "vitest run --coverage --coverage.exclude=types",
     "watch": "vitest watch",
     "build": "echo \"Nothing to build, this command is only here to please size-limit GitHub action\" && exit 0",
     "size": "size-limit",
