--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -32,7 +32,7 @@ jobs:
       - run: pnpm install --no-frozen-lockfile
 
       - name: Use Size limit
-        uses: andresz1/size-limit-action@dd31dce7dcc72a041fd3e49abf0502b13fc4ce05 # support for pnpm
+        uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           skip_step: build
