Add `temporal-polyfill` to enable testing against multiple polyfills

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     }
   },
   "peerDependencies": {
-    "@js-temporal/polyfill": "^0.4.4"
+    "@js-temporal/polyfill": "^0.4.4",
+    "temporal-polyfill": "^0.2.4"
   }
 }
