--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "emitDeclarationOnly": true,                    /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
-    "outDir": "./types",                              /* Redirect output structure to the directory. */
+    "outDir": "./types-transitive",                /* Redirect output structure to the directory. */
     "rootDir": "./src",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
