--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "packageManager": "pnpm@8.6.11",
   "scripts": {
-    "types": "tsc",
+    "types": "tsc && dts-bundle-generator -o types/index.d.ts types-transitive/index.d.ts",
     "test": "vitest run",
     "test:types": "pnpm exec tsd",
     "test:ui": "vitest --ui --coverage.enabled --coverage.exclude=types",
