--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "datetime-attribute",
-  "version": "1.3.4",
+  "version": "1.4.0-rc.0",
   "description": "Generate datetime attributes for the <time> HTML element, following WHATWG and ISO8601 specs.",
   "type": "module",
   "sideEffects": false,
   "exports": {
     ".": {
-        "import": "./src/index.js",
-        "types": "./types/index.d.ts"
+      "import": "./src/index.js",
+      "types": "./types/index.d.ts"
     }
   },
   "types": "./types/index.d.ts",
