--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "packageManager": "pnpm@8.10.5",
   "scripts": {
-    "types": "tsc && dts-bundle-generator --no-banner=true -o types/index.d.ts types-transitive/index.d.ts",
+    "types": "tsc && dts-bundle-generator --silent --no-banner=true -o types/index.d.ts types-transitive/index.d.ts",
     "test": "vitest run",
     "test:types": "pnpm exec tsd",
     "test:ui": "vitest --ui --coverage.enabled --coverage.exclude=types",
