--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "datetime-attribute",
-  "version": "1.3.4",
+  "version": "1.4.0-rc.0",
   "description": "Generate datetime attributes for the <time> HTML element, following WHATWG and ISO8601 specs.",
   "type": "module",
   "sideEffects": false,
-  "exports": "./src/index.js",
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "types": "./types/index.d.ts"
+    }
+  },
+  "types": "./types/index.d.ts",
   "engines": {
     "node": ">=12.8"
   },
-  "packageManager": "pnpm@8.6.11",
+  "packageManager": "pnpm@8.10.5",
   "scripts": {
-    "types": "tsc",
+    "types": "tsc && dts-bundle-generator --silent --no-banner=true -o types/index.d.ts types-transitive/index.d.ts",
     "test": "vitest run",
     "test:types": "pnpm exec tsd",
     "test:ui": "vitest --ui --coverage.enabled --coverage.exclude=types",
@@ -24,9 +30,9 @@
   "files": [
     "CHANGELOG.md",
     "src/**/*.js",
-    "types/**/*.d.ts"
+    "!src/**/*.test.js",
+    "types/index.d.ts"
   ],
-  "types": "./types/index.d.ts",
   "keywords": [
     "time",
     "datetime",
@@ -53,6 +59,7 @@
     "@size-limit/preset-small-lib": "^11.1.2",
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
+    "dts-bundle-generator": "^9.5.0",
     "eslint": "^9.0.0",
     "eslint-plugin-vitest": "0.4.2-beta.5",
     "size-limit": "^11.1.2",
