--- a/package.json
+++ b/package.json
@@ -55,17 +55,17 @@
     "access": "public"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@size-limit/preset-small-lib": "^11.1.2",
+    "@eslint/js": "^9.9.0",
+    "@size-limit/preset-small-lib": "^11.1.4",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
-    "dts-bundle-generator": "^9.5.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-vitest": "0.5.4",
-    "size-limit": "^11.1.2",
-    "tsd": "^0.31.0",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "^8.0.0",
+    "dts-bundle-generator": "^9.5.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-vitest-2": "^0.6.1",
+    "size-limit": "^11.1.4",
+    "tsd": "^0.31.1",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
     "vitest": "^2.0.5"
   },
   "pnpm": {
