--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "@eslint/js": "^9.9.0",
     "@size-limit/preset-small-lib": "^11.1.4",
     "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/eslint-plugin": "^1.0.1",
     "@vitest/ui": "^2.0.5",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.9.0",
-    "eslint-plugin-vitest-2": "^0.6.1",
     "size-limit": "^11.1.4",
     "tsd": "^0.31.1",
     "typescript": "^5.5.4",
