Fix dependabot config for GitHub actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,4 +19,6 @@ updates:
     schedule:
       interval: 'monthly'
     groups:
-      patterns: '*'
+      github-actions:
+        patterns:
+        - '*'
