--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,8 @@ updates:
         dependency-type: 'production'
       development-dependencies:
         dependency-type: 'development'
+    labels:
+    - 'dependencies'
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
@@ -22,3 +24,5 @@ updates:
       github-actions:
         patterns:
         - '*'
+    labels:
+    - 'ci'
